# Lab3-

./: CMakeLists.txt  Figure.h  README.md  tests.cpp
include/: Figure.h  FigureArray.h  Octagon.h  Point.h  Square.h  Triangle.h
src/: Figure.cpp  FigureArray.cpp  Octagon.cpp  Square.cpp  Triangle.cpp  main.cpp
test/: tests.cpp
